lot of little tings

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -53,7 +53,7 @@ AI is a powerful toolbox that has many applications in domains far and wide. The
  - Detect liabilities and mitigate risk
 You can read more about these intents on the Watson website.
 
-![alone](./alone.jpg)
+![AI](../../images/basics/ai/Image_1.png)
 
 # How does AI work?
 Data is the fuel for artificial intelligence (AI). It also takes many forms. It is the music we hear, videos we watch, weather conditions, user profiles we create. Before taking the AI plunge, you need to have the right data, and enough of it.
