--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -2,7 +2,7 @@
 title: "Data"
 ---
 
-import { AnchorLinks, PageDescription, Video } from "gatsby-theme-carbon";
+import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
 
 <PageDescription>
   Add-on repositories, or repos, are components built for a specific product or
@@ -27,7 +27,7 @@ Sampling helps make sure that a given sliver of data is as representative of the
 
 Generally, in statistics and machine learning (ML), we want to know as much as possible about a certain population — an entire demographic of people. That’s usually expensive, tedious, and sometimes impossible. Instead data collectors try to select a sliver of the population that most represents the population as a whole. It could look something like this 
 
-![Sampling](../../fundamentals/data/alone.jpg)
+![Sampling](../../images/basics/data/Image_1.png)
 
 Assuming you could only pick four people, that’s probably the closest you could get to representing the population. Naturally, as the sample size grows closer to the population size, your sample characteristics will be closer to the true characteristics of the whole.
 
