--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -17,7 +17,7 @@ Every person involved in the creation of AI at any step is accountable for consi
 
 <Column colMd={2} colLg={4}>
 
-![Sampling](../../images/ethics/accountability/test.png)
+![Sampling](../../images/ethics/accountability/Image_1.png)
 
 </Column>
 </Row>
@@ -70,7 +70,7 @@ _The IEEE Global Initiative<br/>on Ethics of Autonomous<br/>and Intelligent Syst
 </Column>
 <Column colMd={2} colLg={4}>
 
-![Sampling](../../images/ethics/accountability/test.png)
+![Sampling](../../images/ethics/accountability/Image_2.png)
 
 </Column>
 </Row>
@@ -110,13 +110,14 @@ _The IEEE Global Initiative<br/>on Ethics of Autonomous<br/>and Intelligent Syst
 <Row className="hr example">
 <Column colMd={6} colLg={8}>
 
-#### Value alignment example
+#### Accountability example
 
  - The team understands that for a voice-activated assistant to work properly, it must be “always listening” for a wake word. The team makes it clear to guests that the AI hotel assistant is designed to not keep any data, or monitor guests, in both cases without their knowledge, even if it is listening for a wake word.
  - The audio collected while listening for a wake word is auto-deleted every 5 seconds. Even if a guest opts in, the AI does not actively listen in on guests unless it is called upon.
  - The team knows that this agent will be used in hotels across the world, which will require different languages and customs. They consult with linguists to ensure the AI will be able to speak in guests’ respective languages and respect applicable customs.
 
- ![Sampling](../../images/ethics/accountability/test.png)
 
 </Column>
 </Row>
+
+![Sampling](../../images/ethics/accountability/Image_3.png)
