--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -3,7 +3,7 @@ title: Fundamentals
 hidden: false
 ---
 
-import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
+import { AnchorLink, AnchorLinks, Column, PageDescription, Row } from "gatsby-theme-carbon";
 
 <PageDescription>
   Artificial intelligence (AI) is a mystery and a wonder. It can help us solve humanity's most difficult problems. AI is also vastly misunderstood by most people. For some, AI is a magical black box with the intelligence of a PhD. It knows all about everything, you just bring your problems and, voilá, your problems are solved. For others, fears of AI uprisings, loss of human control and Terminator-like scenarios cloud their capability to understand the present utility of cognitive computing.
@@ -11,14 +11,14 @@ import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
 
 
 <AnchorLinks>
-  <a href="#">Introduction</a>
-  <a href="#">AI Design Foundations</a>
-  <a href="#">Purpose, Value, and Trust</a>
-  <a href="#">Characteristics for AI</a>
-  <a href="#">Design Factors or AI</a>
-  <a href="#">AI Ecosystem</a>
-  <a href="#">AI Conext Model</a>
-  <a href="#">Questions to Ask Your Team</a>
+  <AnchorLink href={"#"}>Introduction</AnchorLink>
+  <AnchorLink href={"#"}>AI Design Foundations</AnchorLink>
+  <AnchorLink href={"#"}>Purpose, Value, and Trust</AnchorLink>
+  <AnchorLink href={"#"}>Characteristics for AI</AnchorLink>
+  <AnchorLink href={"#"}>Design Factors or AI</AnchorLink>
+  <AnchorLink href={"#"}>AI Ecosystem</AnchorLink>
+  <AnchorLink href={"#"}>AI Conext Model</AnchorLink>
+  <AnchorLink href={"#"}>Questions to Ask Your Team</AnchorLink>
 </AnchorLinks>
 
 # Introduction
@@ -101,7 +101,15 @@ AIs are capable of delivering more human-like interactions with people — based
 ## The Relationship Age
 DL is remarkable at making deep connections within the data because of neural networks. Neural networks come in many shapes and sizes, but are essential for making deep learning work. They take an input, and perform several rounds of math on its features for each layer, until it predicts an output. (Deep breath, the rules of ML still apply.) DL uses a specific subset of NN in order to work, (e.g. convolutional NN, recurrent NN).
 
-![The Relationship Age](../../images/overview/test.png)
+
+<Row>
+<Column colLg={12}>
+
+![The Relationship Age](../../images/fundamentals/Image_1.png)
+
+</Column>
+</Row>
+
 
 Philosophically and psychologically, we find purpose, value and trust in others when we can perceive intended meaning, consider this meaning from differing points of view, and acquire knowledge so that we can act to have an effect on one another. If a system has the capability to understand, reason, learn, and interact then it has the basis to form a relationship with a human.
 
@@ -129,14 +137,20 @@ AI interacts naturally with people and systems. The interaction model of an AI i
 #### Bonding
 Both parties are fully partnered through trust and mutual appreciation. The relationship is indefinite and only to be broken through a formal notice.
 
-![The Relationship Age](../../images/overview/test.png)
+![The Relationship Age](../../images/fundamentals/Image_2.png)
 
 ### So what do we need to consider when one person in a relationship is replaced by a machine?
 By establishing tone and personality first, the system will have the means to endear itself to the user. As these systems are like “digital toddlers,” the means to make an emotional connection with its users will be essential. No one knows what it’s really like to have a full emotional bond with an AI outside of the movies or books. This is something for us all to aspire to.
 
 #### AI is a symbiotic relationship
 
-![AI is a symbiotic relationship](../../images/overview/test.png)
+<Row>
+<Column colLg={7}>
+
+![AI is a symbiotic relationship](../../images/fundamentals/Image_3.png)
+
+</Column>
+</Row>
 
 Human augments the machine and the machine augments the human.
 
@@ -158,11 +172,23 @@ The external factors that will both inform and educate the system
 #### Context
 The holistic view of a complete human experience. Includes emotional, physical, system, and domain knowledge.
 
-![The Relationship Age](../../images/overview/test.png)
+<Row>
+<Column colLg={7}>
+
+![The Relationship Age](../../images/fundamentals/Image_4.png)
+
+</Column>
+</Row>
 
 # AI Context Model
 
-![The Relationship Age](../../images/overview/test.png)
+<Row>
+<Column colLg={12}>
+
+![The Relationship Age](../../images/fundamentals/Image_5.png)
+
+</Column>
+</Row>
 
 # Questions to ask your team
 
