--- a/src/pages/edt-ai/index.mdx
+++ b/src/pages/edt-ai/index.mdx
@@ -2,7 +2,7 @@
 title: EDT+AI
 ---
 
-import { AnchorLinks, PageDescription, Video } from "gatsby-theme-carbon";
+import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
 
 <PageDescription>
   Eventually this will be the blurb for EDT+AI, but until now these are just
@@ -12,6 +12,23 @@ import { AnchorLinks, PageDescription, Video } from "gatsby-theme-carbon";
 </PageDescription>
 
 <AnchorLinks>
-  <a href="#">Issa</a>
-  <a href="#">Link</a>
+  <AnchorLink href={"#"}>Issa</AnchorLink>
+  <AnchorLink href={"#"}>Link</AnchorLink>
 </AnchorLinks>
+
+<Row>
+<Column colMd={2} colMd={3} colLg={4}>
+<ResourceCard
+  href={'ibm.com'}
+  subTitle={'Subtitle'}
+  title={'Title'} />
+</Column>
+</Row>
+
+<Row>
+<Column colSm={12} colMd={12} colLg={12}>
+
+<Video title="Test" vimeoId="235672083" />
+
+</Column>
+</Row>
