--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -2,14 +2,73 @@
 title: Resources
 ---
 
+import { ArticleCard, Column, ResourceCard, Row } from "gatsby-theme-carbon";
+
 ## Activities
-Clickable tiles will go here
+<Row>
+<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<ResourceCard
+  href={'ibm.com'}
+  subTitle={'Subtitle'}
+  title={'Title'} />
+</Column>
+<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<ResourceCard
+  href={'ibm.com'}
+  subTitle={'Subtitle'}
+  title={'Title'} />
+</Column>
+</Row>
 
 ## Tools
-Clickable tiles will go here
+<Row>
+<Column noGutterSm={true} colMd={2} colMd={3} colLg={4}>
+<ResourceCard
+  href={'ibm.com'}
+  subTitle={'Subtitle'}
+  title={'Title'} />
+</Column>
+</Row>
 
 ## Articles
-Even more dope stuff
+<Row>
+<Column colMd={2} colMd={3} colLg={4}>
+<ArticleCard
+  href={'ibm.com'}
+  author={'Tim Robinson'}
+  title={'Relly cool article'}
+  date={'April 2020'}
+  readTime={'5 mins'} >
+
+![test](../../images/ethics/accountability/test.png)
+
+</ArticleCard>
+</Column>
+<Column colMd={2} colMd={3} colLg={4}>
+<ArticleCard
+  href={'ibm.com'}
+  author={'Tim Robinson'}
+  title={'This is an even better title'}
+  date={'April 2020'}
+  readTime={'5 mins'} >
+
+![test](../../images/ethics/accountability/test.png)
+
+</ArticleCard>
+</Column>
+<Column colMd={2} colMd={3} colLg={4}>
+<ArticleCard
+  href={'ibm.com'}
+  author={'Tim Robinson'}
+  title={'This title is a waste of your time'}
+  date={'April 2020'}
+  readTime={'5 mins'} >
+
+![test](../../images/ethics/accountability/test.png)
+
+</ArticleCard>
+</Column>
+</Row>
 
 ## Additional resources
 Hot doggy this is all great!!!
