homepage, assets, and 0.4.0 updates

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -10,6 +10,8 @@ import { AnchorLinks, PageDescription, Video } from "gatsby-theme-carbon";
   Inspired by Reddit’s “Explain Like I’m 5,” these succinctly break down complicated topics without relying on technical jargon.
 </PageDescription>
 
+Read time | *5 mins*
+
 # What is artificial intelligence?
 
 Artificial intelligence (AI) is a system capable of simulating human intelligence and thought processes.
