--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -11,6 +11,8 @@ import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
   and guidelines.
 </PageDescription>
 
+Read time | *5 mins*
+
 # What is data?
 
 #### The fuel for artificial intelligence (AI)
