mostly ethics pages styling

--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -2,22 +2,24 @@
 title: "Accountability"
 ---
 
-import { Column, Row } from "gatsby-theme-carbon";
+import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
+
 <Row className="opener">
-<Column colMd={6} colLg={8}>
+<Column colMd={6} colLg={7}>
 
-## AI designers and developers are responsible for considering AI design, development, decision processes, and outcomes.
-Human judgment plays a role throughout a seemingly objective system of logical decisions. It is humans who write algorithms, who define success or failure, who make decisions about the uses of systems and who may be affected by a system’s outcomes.
+### AI designers and developers are responsible for considering AI design, development, decision processes, and outcomes. Human judgment plays a role throughout a seemingly objective system of logical decisions. It is humans who write algorithms, who define success or failure, who make decisions about the uses of systems and who may be affected by a system’s outcomes.
 
-Every person involved in the creation of AI at any step is accountable for considering the system’s impact in the world, as are the companies invested in its development.
+### Every person involved in the creation of AI at any step is accountable for considering the system’s impact in the world, as are the companies invested in its development.
+
+Read time | **5 minutes**
 
 </Column>
 
-<Column colMd={2} colLg={4}>
+<Column offsetLg={1} colMd={2} colLg={2}>
 
-![Sampling](../../images/ethics/accountability/Image_1.png)
+![Accountability pictogram](../../images/ethics/accountability/Image_1.png)
 
 </Column>
 </Row>
@@ -25,7 +27,7 @@ Every person involved in the creation of AI at any step is accountable for consi
 <Row className="hr recommended">
 <Column colSm={4}>
 
-#### Recommended actions to take
+## Recommended actions to take
 
 </Column>
 <Column colMd={4} colLg={4}>
@@ -60,27 +62,10 @@ Allow for questions. A user should be able to ask why an AI is doing what it's d
 
 
 
-<Row className="hr quote">
-<Column colMd={6} colLg={8}>
+<Row className="consider">
+<Column colMd={5} colLg={7}>
 
-### “If machines engage in human communities as autonomous agents, then those agents will be expected to follow the community’s social and moral norms. A necessary step in enabling machines to do so is to identify these norms. But whose norms?”
-
-_The IEEE Global Initiative<br/>on Ethics of Autonomous<br/>and Intelligent Systems_
-
-</Column>
-<Column colMd={2} colLg={4}>
-
-![Sampling](../../images/ethics/accountability/Image_2.png)
-
-</Column>
-</Row>
-
-
-
-<Row className="hr consider">
-<Column colMd={6} colLg={8}>
-
-#### To consider
+## To consider
 
  - If you need somewhere to start, consider IBM’s Standards of Corporate Responsibility12 or use your company’s standards documentation.
  - Values are subjective and differ globally. Global companies must take into account language barriers and cultural differences.
@@ -88,14 +73,25 @@ _The IEEE Global Initiative<br/>on Ethics of Autonomous<br/>and Intelligent Syst
 
 
 </Column>
+
+<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
+<Aside>
+
+_“Nearly 50% of the surveyed developers believe that the humans creating AI should be responsible for considering the ramifications of the technology. Not the bosses. Not the middle managers. The coders.”_
+
+**Mark Wilson** <br/>
+_Fast Company7 on Stack Overflow’s Developer Survey Results 2018_
+
+</Aside>
+</Column>
 </Row>
 
 
 
-<Row className="hr questions">
-<Column colMd={6} colLg={8}>
+<Row className="questions">
+<Column colMd={6} colLg={7}>
 
-#### Questions to ask your team
+## Questions to ask your team
 
  - Which group’s values are expressed by our AI and why?
  - How do we agree on which values to consider as a team? (For more reading on moral alignment, check here)
@@ -107,10 +103,10 @@ _The IEEE Global Initiative<br/>on Ethics of Autonomous<br/>and Intelligent Syst
 
 
 
-<Row className="hr example">
-<Column colMd={6} colLg={8}>
+<Row className="example">
+<Column colMd={6} colLg={7}>
 
-#### Accountability example
+## Accountability example
 
  - The team understands that for a voice-activated assistant to work properly, it must be “always listening” for a wake word. The team makes it clear to guests that the AI hotel assistant is designed to not keep any data, or monitor guests, in both cases without their knowledge, even if it is listening for a wake word.
  - The audio collected while listening for a wake word is auto-deleted every 5 seconds. Even if a guest opts in, the AI does not actively listen in on guests unless it is called upon.
