--- a/src/pages/ethics/explainability.mdx
+++ b/src/pages/ethics/explainability.mdx
@@ -2,31 +2,23 @@
 title: "Explainability"
 ---
 
-import { Column, Row } from "gatsby-theme-carbon";
+import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colMd={6} colLg={8}>
+<Column colMd={6} colLg={7}>
 
-## AI should be designed for humans to easily perceive, detect, and understand its decision process.
-In general, we don't blindly trust those who can't explain their
-reasoning. The same goes for AI, perhaps
-<a href="https://www.ibm.com/watson/advantage-reports/future-of-artificial-intelligence/building-trust-in-ai.html">
-even more so</a>. As an AI increases in capabilities and
-achieves a greater range of impact, its decision-making process
-should be explainable in terms people can understand.
-Explainability is key for users interacting with AI to understand
-the AI's conclusions and recommendations. Your users should always
-be aware that they are interacting with an AI. Good design does
-not sacrifice transparency in creating a seamless experience.
+### AI should be designed for humans to easily perceive, detect, and understand its decision process.
 
-*Imperceptible AI is not ethical AI.*
+### In general, we don't blindly trust those who can't explain their reasoning. The same goes for AI, perhaps <a href="https://www.ibm.com/watson/advantage-reports/future-of-artificial-intelligence/building-trust-in-ai.html"> even more so</a>. As an AI increases in capabilities and achieves a greater range of impact, its decision-making process should be explainable in terms people can understand. Explainability is key for users interacting with AI to understand the AI's conclusions and recommendations. Your users should always be aware that they are interacting with an AI. Good design does not sacrifice transparency in creating a seamless experience. **Imperceptible AI is not ethical AI.**
+
+Read time | **5 minutes**
 
 </Column>
 
-<Column colMd={2} colLg={4}>
+<Column offsetLg={1} colMd={2} colLg={2}>
 
-![Sampling](../../images/ethics/accountability/Image_1.png)
+![Explainability pictogram](../../images/ethics/explainability/Image_1.png)
 
 </Column>
 </Row>
@@ -34,7 +26,7 @@ not sacrifice transparency in creating a seamless experience.
 <Row className="hr recommended">
 <Column colSm={4}>
 
-#### Recommended actions to take
+## Recommended actions to take
 
 </Column>
 <Column colMd={4} colLg={4}>
@@ -79,27 +71,10 @@ decision processes.
 
 
 
-<Row className="hr quote">
-<Column colMd={6} colLg={8}>
-
-### “IBM supports transparency and data governance policies that will ensure people understand how an AI system came to a given conclusion or recommendation. Companies must be able to explain what went into their algorithm’s recommendations. If they can’t, then their systems shouldn’t be on the market.“
-
-_Data Responsibility at IBM_
-
-</Column>
-<Column colMd={2} colLg={4}>
-
-![Sampling](../../images/ethics/accountability/Image_2.png)
-
-</Column>
-</Row>
-
-
-
 <Row className="hr consider">
-<Column colMd={6} colLg={8}>
+<Column colMd={6} colLg={7}>
 
-#### To consider
+## To consider
 
  - Explainability is needed to build public confidence in
  disruptive technology, to promote safer practices, and to
@@ -111,14 +86,24 @@ _Data Responsibility at IBM_
 
 
 </Column>
+
+<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
+<Aside>
+
+_“IBM supports transparency and data governance policies that will ensure people understand how an AI system came to a given conclusion or recommendation. Companies must be able to explain what went into their algorithm’s recommendations. If they can’t, then their systems shouldn’t be on the market.“_
+
+**Data Responsibility at IBM**
+
+</Aside>
+</Column>
 </Row>
 
 
 
-<Row className="hr questions">
-<Column colMd={6} colLg={8}>
+<Row className="questions">
+<Column colMd={6} colLg={7}>
 
-#### Questions to ask your team
+## Questions to ask your team
 
  - How do we build explainability into our experience without
  detracting from user experience or distracting from the task at
@@ -135,10 +120,10 @@ _Data Responsibility at IBM_
 
 
 
-<Row className="hr example">
-<Column colMd={6} colLg={8}>
+<Row className="example">
+<Column colMd={6} colLg={7}>
 
-#### Explainability example
+## Explainability example
 
  - Per GDPR (<a href="https://martechtoday.com/guide/gdpr-the-general-data-protection-regulation">
  General Data Protection Regulation</a>), a guest must
@@ -160,4 +145,4 @@ _Data Responsibility at IBM_
 </Column>
 </Row>
 
-![Sampling](../../images/ethics/accountability/Image_3.png)
+![Explainability illustration](../../images/ethics/explainability/Image_2.png)
