--- a/src/pages/ethics/fairness.mdx
+++ b/src/pages/ethics/fairness.mdx
@@ -2,26 +2,22 @@
 title: "Fairness"
 ---
 
-import { Column, Row } from "gatsby-theme-carbon";
+import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colMd={6} colLg={8}>
+<Column colMd={6} colLg={7}>
 
-## AI must be designed to minimize bias and promote inclusive representation.
-AI provides deeper insight into our personal lives when
-interacting with our sensitive data. As humans are inherently
-vulnerable to biases, and are responsible for building AI, there
-are chances for human bias to be embedded in the systems we
-create. It is the role of a responsible team to minimize
-algorithmic bias through ongoing research and data collection
-which is representative of a diverse population.
+### AI must be designed to minimize bias and promote inclusive representation.
 
+### AI provides deeper insight into our personal lives when interacting with our sensitive data. As humans are inherently vulnerable to biases, and are responsible for building AI, there are chances for human bias to be embedded in the systems we create. It is the role of a responsible team to minimize algorithmic bias through ongoing research and data collection which is representative of a diverse population.
+
+Read time | **5 mins**
 </Column>
 
-<Column colMd={2} colLg={4}>
+<Column offsetLg={1} colMd={2} colLg={2}>
 
-![Sampling](../../images/ethics/accountability/Image_1.png)
+![Fairness pictogram](../../images/ethics/fairness/Image_1.png)
 
 </Column>
 </Row>
@@ -29,7 +25,7 @@ which is representative of a diverse population.
 <Row className="hr recommended">
 <Column colSm={4}>
 
-#### Recommended actions to take
+## Recommended actions to take
 
 </Column>
 <Column colMd={4} colLg={4}>
@@ -68,26 +64,10 @@ asks “Let me know what you think,” after suggesting a link
 
 
 
-<Row className="hr quote">
-<Column colMd={6} colLg={8}>
-
-### “By progressing new ethical frameworks for AI and thinking critically about the quality of our datasets and how humans perceive and work with AI, we can accelerate the [AI] field in a way that will benefit everyone. IBM believes that [AI] actually holds the keys to mitigating bias out of AI systems – and offers an unprecedented opportunity to shed light on the existing biases we hold as humans.“
-_Bias in AI: How we Build Fair AI Systems and Less-Biased Human_
-
-</Column>
-<Column colMd={2} colLg={4}>
-
-![Sampling](../../images/ethics/accountability/Image_2.png)
-
-</Column>
-</Row>
-
-
-
 <Row className="hr consider">
-<Column colMd={6} colLg={8}>
+<Column colMd={6} colLg={7}>
 
-#### To consider
+## To consider
 
  - Diverse teams help to represent a wider variation of experiences
  to minimize bias. Embrace team members of different ages,
@@ -99,14 +79,24 @@ _Bias in AI: How we Build Fair AI Systems and Less-Biased Human_
 
 
 </Column>
+
+<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
+<Aside>
+
+_“By progressing new ethical frameworks for AI and thinking critically about the quality of our datasets and how humans perceive and work with AI, we can accelerate the [AI] field in a way that will benefit everyone. IBM believes that [AI] actually holds the keys to mitigating bias out of AI systems – and offers an unprecedented opportunity to shed light on the existing biases we hold as humans.“_
+
+**Bias in AI: How we Build Fair AI Systems and Less-Biased Humans**
+
+</Aside>
+</Column>
 </Row>
 
 
 
-<Row className="hr questions">
-<Column colMd={6} colLg={8}>
+<Row className="questions">
+<Column colMd={6} colLg={7}>
 
-#### Questions to ask your team
+## Questions to ask your team
 
  - How can we identify and audit unintentional biases that we run
  into during the design and development of our AI?
@@ -121,10 +111,10 @@ _Bias in AI: How we Build Fair AI Systems and Less-Biased Human_
 
 
 
-<Row className="hr example">
-<Column colMd={6} colLg={8}>
+<Row className="example">
+<Column colMd={6} colLg={7}>
 
-#### Fairness example
+## Fairness example
 
  - After sitting down with members of the hotel’s global
  management, the team uncovers that diversity and inclusiveness
@@ -142,4 +132,4 @@ _Bias in AI: How we Build Fair AI Systems and Less-Biased Human_
 </Column>
 </Row>
 
-![Sampling](../../images/ethics/accountability/Image_3.png)
+![Fairness illustration](../../images/ethics/fairness/Image_2.png)
