--- a/src/pages/ethics/value-alignment.mdx
+++ b/src/pages/ethics/value-alignment.mdx
@@ -2,22 +2,24 @@
 title: "Value Alignment"
 ---
 
-import { Column, Row } from "gatsby-theme-carbon";
+import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colMd={6} colLg={8}>
+<Column colMd={6} colLg={7}>
 
-## AI should be designed to align with the norms and values of your user group in mind.
-AI works alongside diverse, human interests. People make decisions based on any number of contextual factors, including their experiences, memories, upbringing, and cultural norms. These factors allow us to have a fundamental understanding of “right and wrong” in a wide range of contexts, at home, in the office, or elsewhere. This is second nature for humans, as we have a wealth of experiences to draw upon.
+### AI should be designed to align with the norms and values of your user group in mind.
+### AI works alongside diverse, human interests. People make decisions based on any number of contextual factors, including their experiences, memories, upbringing, and cultural norms. These factors allow us to have a fundamental understanding of “right and wrong” in a wide range of contexts, at home, in the office, or elsewhere. This is second nature for humans, as we have a wealth of experiences to draw upon.
 
-Today’s AI systems do not have these types of experiences to draw upon, so it is the job of designers and developers to collaborate with each other in order to ensure consideration of existing values. Care is required to ensure sensitivity to a wide range of cultural norms and values. As daunting as it may seem to take value systems into account, the common core of universal principles is that they are a cooperative phenomenon. Successful teams already understand that cooperation and collaboration leads to the best outcomes.
+### Today’s AI systems do not have these types of experiences to draw upon, so it is the job of designers and developers to collaborate with each other in order to ensure consideration of existing values. Care is required to ensure sensitivity to a wide range of cultural norms and values. As daunting as it may seem to take value systems into account, the common core of universal principles is that they are a cooperative phenomenon. Successful teams already understand that cooperation and collaboration leads to the best outcomes.
+
+Read time | **5 minutes**
 
 </Column>
 
-<Column colMd={2} colLg={4}>
+<Column offsetLg={1} colMd={2} colLg={2}>
 
-![Sampling](../../images/ethics/accountability/Image_1.png)
+![Value alignment pictogram](../../images/ethics/value-alignment/Image_1.png)
 
 </Column>
 </Row>
@@ -25,7 +27,7 @@ Today’s AI systems do not have these types of experiences to draw upon, so it 
 <Row className="hr recommended">
 <Column colSm={4}>
 
-#### Recommended actions to take
+## Recommended actions to take
 
 </Column>
 <Column colMd={4} colLg={4}>
@@ -53,27 +55,10 @@ Consider mapping out your understanding of your users’ values and aligning the
 
 
 
-<Row className="hr quote">
-<Column colMd={6} colLg={8}>
-
-### “Nearly 50% of the surveyed developers believe that the humans creating AI should be responsible for considering the ramifications of the technology. Not the bosses. Not the middle managers. The coders.”
-
-_Mark Wilson<br/>Fast Company7 on Stack Overflow’s<br/>Developer Survey Results 2018_
-
-</Column>
-<Column colMd={2} colLg={4}>
-
-![Sampling](../../images/ethics/accountability/Image_2.png)
-
-</Column>
-</Row>
-
-
-
 <Row className="hr consider">
-<Column colMd={6} colLg={8}>
+<Column colMd={6} colLg={7}>
 
-#### To consider
+## To consider
 
  - Explainability is needed to build public confidence in disruptive technology, to promote safer practices, and to facilitate broader societal adoption.
  - There are situations where users may not have access to the full decision process that an AI might go through, e.g., financial investment algorithms.
@@ -81,14 +66,25 @@ _Mark Wilson<br/>Fast Company7 on Stack Overflow’s<br/>Developer Survey Result
 
 
 </Column>
+
+<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
+<Aside>
+
+_“If machines engage in human communities as autonomous agents, then those agents will be expected to follow the community’s social and moral norms. <br/> A necessary step in enabling machines to do so is to identify these norms. But whose norms?”_
+
+** The IEEE Global Initiative ** <br/>
+_on Ethics of Autonomous and Intelligent Systems_
+
+</Aside>
+</Column>
 </Row>
 
 
 
-<Row className="hr questions">
-<Column colMd={6} colLg={8}>
+<Row className="questions">
+<Column colMd={6} colLg={7}>
 
-#### Questions to ask your team
+## Questions to ask your team
 
  - How do we build explainability into our experience without detracting from user experience or distracting from the task at hand?
  - Do certain processes or pieces of information need to be hidden from users for security or IP reasons? How is this explained to users?
@@ -100,10 +96,10 @@ _Mark Wilson<br/>Fast Company7 on Stack Overflow’s<br/>Developer Survey Result
 
 
 
-<Row className="hr example">
-<Column colMd={6} colLg={8}>
+<Row className="example">
+<Column colMd={6} colLg={7}>
 
-#### Accountability example
+## Accountability example
 
  - The team utilizes design researchers to contact real guests in the hotels to understand their wants and needs through face-to-face user interviews.
  - The team considers their own responsibility when a hotel assistant’s feedback does not meet the needs or expectations of guests. They have implemented a feedback learning loop to better understand preferences and have highlighted the ability for a guest to turn off the AI at any point during their stay.
@@ -112,4 +108,4 @@ _Mark Wilson<br/>Fast Company7 on Stack Overflow’s<br/>Developer Survey Result
 </Column>
 </Row>
 
-![Sampling](../../images/ethics/accountability/Image_3.png)
+![Sampling](../../images/ethics/value-alignment/Image_2.png)
