--- a/src/pages/ethics/user-data-rights.mdx
+++ b/src/pages/ethics/user-data-rights.mdx
@@ -2,36 +2,25 @@
 title: "User Data Rights"
 ---
 
-import { Column, Row } from "gatsby-theme-carbon";
+import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colMd={6} colLg={8}>
+<Column colMd={6} colLg={7}>
 
-## AI must be designed to protect user data and preserve the user’s power over access and uses.
-It is your team's responsibility to keep users empowered with
-control over their interactions.
+### AI must be designed to protect user data and preserve the user’s power over access and uses.
 
-<a href="www.pewresearch.org/fact-tank/2016/09/21/the-state-of-privacy-in-america/">Pew Research</a>
-recently found that being in control of our own information is
-“very important” to 74% of Americans.
-<a href="https://ec.europa.eu/digital-single-market/en/news/eprivacy-consultations-show-confidentiality-communications-and- challenge-new-technologies-are">
-The European Commission20</a> found that 71% of EU citizens find
-it unacceptable for companies to share information about them
-without their permission. These percentages will rise as AI is
-further used to either amplify our privacy or undermine it. Your
-company should be fully compliant with the applicable portions of
-EU’s
-<a href="https://www.eugdpr.org/">
-General Data Protection Regulation</a> and any comparable
-regulations in other countries, to make sure users understand that
-AI is working in their best interests.
+### It is your team's responsibility to keep users empowered with control over their interactions.
+
+### <a href="www.pewresearch.org/fact-tank/2016/09/21/the-state-of-privacy-in-america/">Pew Research</a> recently found that being in control of our own information is “very important” to 74% of Americans. <a href="https://ec.europa.eu/digital-single-market/en/news/eprivacy-consultations-show-confidentiality-communications-and- challenge-new-technologies-are"> The European Commission20</a> found that 71% of EU citizens find it unacceptable for companies to share information about them without their permission. These percentages will rise as AI is further used to either amplify our privacy or undermine it. Your company should be fully compliant with the applicable portions of EU’s <a href="https://www.eugdpr.org/"> General Data Protection Regulation</a> and any comparable regulations in other countries, to make sure users understand that AI is working in their best interests.
+
+Read time | **5 minutes**
 
 </Column>
 
-<Column colMd={2} colLg={4}>
+<Column offsetLg={1} colMd={2} colLg={2}>
 
-![Sampling](../../images/ethics/accountability/Image_1.png)
+![User data rights pictogram](../../images/ethics/user-data-rights/Image_1.png)
 
 </Column>
 </Row>
@@ -39,7 +28,7 @@ AI is working in their best interests.
 <Row className="hr recommended">
 <Column colSm={4}>
 
-#### Recommended actions to take
+## Recommended actions to take
 
 </Column>
 <Column colMd={4} colLg={4}>
@@ -100,26 +89,10 @@ acceptable user data access permissions.
 
 
 
-<Row className="hr quote">
-<Column colMd={6} colLg={8}>
-
-### Nearly 50% of the surveyed developers believe that the humans creating AI should be responsible for considering the ramifications of the technology. Not the bosses. Not the middle managers. The coders.
-_Fast Company7 on Stack Overflow's Developer Survey Results 2018_
-
-</Column>
-<Column colMd={2} colLg={4}>
-
-![Sampling](../../images/ethics/accountability/Image_2.png)
-
-</Column>
-</Row>
-
-
-
 <Row className="hr consider">
-<Column colMd={6} colLg={8}>
+<Column colMd={6} colLg={7}>
 
-#### To consider
+## To consider
 
  - Employ security practices including encryption, access control
  methodologies, and proprietary consent management modules to
@@ -128,16 +101,26 @@ _Fast Company7 on Stack Overflow's Developer Survey Results 2018_
  - It is your responsibility to work with your team to address any
  lack of these practices.
 
+</Column>
 
+<Column colSm={0} colMd={2} colLg={3} offsetMd={1} noGutterSm>
+<Aside>
+
+_“Individuals require mechanisms to help curate their unique identity and personal data in conjunction with policies and practices that make them explicitly aware of consequences resulting from the bundling or resale of their personal information.”_
+
+**The IEEE Global Initiative**
+_on Ethics of Autonomous and Intelligent Systems_
+
+</Aside>
 </Column>
 </Row>
 
 
 
-<Row className="hr questions">
-<Column colMd={6} colLg={8}>
+<Row className="questions">
+<Column colMd={6} colLg={7}>
 
-#### Questions to ask your team
+## Questions to ask your team
 
  - What types of sensitive personal datadoes the AI utilize and
  how will this data be protected?
@@ -153,10 +136,10 @@ _Fast Company7 on Stack Overflow's Developer Survey Results 2018_
 
 
 
-<Row className="hr example">
-<Column colMd={6} colLg={8}>
+<Row className="example">
+<Column colMd={6} colLg={7}>
 
-#### User data rights example
+## User data rights example
 
  - The hotel provides guests with a consent agreement to utilize
  the AI hotel assistant before they begin using the AI’s
@@ -173,4 +156,4 @@ _Fast Company7 on Stack Overflow's Developer Survey Results 2018_
 </Column>
 </Row>
 
-![Sampling](../../images/ethics/accountability/Image_3.png)
+![User data rights illustration](../../images/ethics/user-data-rights/Image_2.png)
